# Featranker

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  example_featureCalc.py  featureCalc.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
docs/superpowers/plans/: 2026-07-16-leakage-safe-ranking.md  2026-07-17-modern-readme.md
docs/superpowers/specs/: 2026-07-16-leakage-safe-ranking-design.md  2026-07-17-modern-readme-design.md
featranker/: __init__.py  importance.py  importance_config.yaml
featureRanker/: __init__.py  featureCalc.py  importance.py
tests/: test_importance.py  test_public_dataset.py
