[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "featranker"
version = "0.2.0"
description = "Rank feature importance across multiple ML models."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "CountZero" }]
dependencies = [
  "numpy",
  "scikit-learn",
  "pyyaml",
  "tqdm",
]

[project.optional-dependencies]
xgboost = ["xgboost"]
lightgbm = ["lightgbm"]
catboost = ["catboost"]
all = ["xgboost", "lightgbm", "catboost"]
test = ["pytest", "pandas", "build"]

[project.scripts]
featranker = "featranker.importance:main"

[tool.setuptools]
packages = ["featranker"]
include-package-data = true

[tool.setuptools.package-data]
featranker = ["importance_config.yaml"]
